# restartwell

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CLAIMS.md  architecture.d2
results/: v0.1.0a1_metrics.json  v0.1.0a2_metrics.json
src/restartwell/: __init__.py  _shim.py  cli.py  cutoff.py  effectiveness.py  emit.py  instrument.py  intake.py  luby.py  savings.py  survival.py  types.py
src/restartwell/adapters/: __init__.py  langfuse.py  otel.py
src/restartwell/bench/: __init__.py  baselines.py  datasets.py  gates.py  harness.py  metrics.py
tests/: test_adapters.py  test_boundary.py  test_cli.py  test_cutoff.py  test_effectiveness.py  test_emit.py  test_gates.py  test_instrument.py  test_intake.py  test_luby.py  test_savings.py  test_survival.py  test_types.py
